kube/imageproxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imageproxy-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - resizer.greyh.at
    secretName: imageproxy-tls
  defaultBackend:
    service:
      name: imageproxy
      port:
        number: 492
  rules:
  - host: resizer.greyh.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: imageproxy
            port:
              number: 492
